portfolio/src/components/ProjectBlocks/index.css
.images-container {
    display: flex;
    gap: 25px;
    flex-wrap: wrap;
    padding-bottom: 100px;
    justify-content: space-between;
}

.image-box {
    position: relative;
    flex: 1 1 calc(33% - 25px);
    height: 350px;
    overflow: hidden;
    border-radius: 30px;
    max-width: calc(33% - 25px);

    .portfolio-image {
        position: absolute;
        z-index: 1;
        width: 100%;
        height: 100%;
        object-fit: cover;
        transition: transform 0.3s ease;
    }

    .content {
        position: absolute;
        width: 100%;
        z-index: 2;
        padding: 10px 20px;
        background: linear-gradient(0deg, rgba(0, 51, 102, 0.8), rgba(0, 0, 0, 0.8));
        bottom: 0;
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        height: 25%;
        transition: height 0.4s ease;
    }

    .title {
        color: #fff;
        font-size: 24px;
        font-weight: bold;
        margin: 0 0 10px 0;
        text-align: left;
        white-space: nowrap;
        text-overflow: ellipsis;
    }
    

    .technologies {
        color: #b9b9b9;
        font-size: 13px;
        font-weight: 700;
        margin: 0;
        text-align: left;
    }

    .description {
        font-size: 14px;
        color: #d3d3d3;
        opacity: 0;
        transition: opacity 0.4s ease, transform 0.4s ease;
        transform: translateY(20px);
        max-height: 100%;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: normal;
        text-align: left;
        font-weight: bold;
    }

    .description-line {
        margin-bottom: 20px;
    }

    .btn {
        opacity: 0;
        transform: translateY(20px);
        transition: opacity 0.4s ease, transform 0.4s ease;
        margin-top: auto;
        padding: 0 23px;
        height: 40px;
        line-height: 34px;
        border: 2px solid rgb(83, 138, 194);
        border-radius: 4px;
        font-size: 14px;
        color: #fff;
        background: transparent;
        text-transform: uppercase;
        font-weight: 700;
        cursor: pointer;
        width: 100%;
        text-align: center;
    }

    .btn:hover {
        transform: translateY(-3px);
        background: rgb(83, 138, 194);
    }

    &:hover .content {
        height: 100%;
    }

    &:hover .description, &:hover .btn {
        opacity: 1;
        transform: translateY(0);
    }
}

@media (max-width: 1024px) {
    .image-box {
        flex: 1 1 calc(50% - 25px);
        max-width: calc(50% - 25px);
        height: 350px; /* Explicitly set the height */
    }
}

@media (max-width: 768px) {
    .image-box {
        flex: 1 1 100%;
        max-width: 100%;
        height: 350px; /* Explicitly set the height for smaller screens */
    }
}

